<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Application</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login_message">Login</string>
    <string name="loginname_message">login name</string>
    <string name="password_message">password</string>
    <string name="radiobutton_message">Radio Button</string>
    <string name="checkbox_message">Check Box</string>
    <string name="switch_message">What does this do?</string>
    <string name="login_button">Login_button</string>
    <string name="switch_on">Swtich_on</string>
    <string name="switch_off">Switch_off</string>
    <string name="ok">Ok</string>
    <string name="dialog_title">Dialog_title</string>
    <string name="dialog_message">Do you want to quit</string>
    <string name="cancel">Cancel</string>
    <string name="chart_button">Start Chat</string>
    <string name="send_button">Send</string>
    <string name="weather_check">Weather Forecast</string>
    <string name="fragment_message">Message Here</string>
    <string name="delete_message">DELETE THIS MESSAGE</string>
    <string name="title_activity_test_tool_bar">TestToolBar</string>
    <string name="alertAction2_toolbar">Do you want to go back?</string>
    <string name="newMessage">New Message</string>
    <string name="alertAction3_toolbar">Do you want to replace the new message to Snackbar</string>
</resources>