<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.xinji.androidlabs.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/hello_message"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:text="@string/ButtonText"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="267dp" />

    <Button
        android:id="@+id/startChart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chart_button" />

    <Button
        android:id="@+id/weather_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:layout_marginEnd="184dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/weather_check"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/toolbar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="240dp"
        android:background="@android:color/holo_blue_light"
        android:text="Test Toolbar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</LinearLayout>